--- a/manifest.json
+++ b/manifest.json
@@ -51,7 +51,7 @@
 	"browser_action": {
 		"default_icon": "icons/icon_32.png",
 		"default_popup": "air/popup.html",
-		"default_title": "猎豹抢票党/12306订票助手 V7"
+		"default_title": "12306helper"
 	},
 	"description": "12306订票助手 v7: 帮您订票的小助手 by 木鱼，全力为您的车票购买献计献策！",
 	"key": "7k6gnXVACvUPU2DfslJgSrWJTHqIg5uwd+Kgl/5zSg==",
@@ -65,7 +65,7 @@
 		"128": "icons/icon_128.png"
 	},
 	"homepage_url": "http://www.fishlee.net/",
-	"permissions": [ "management", "tabs", "http://*.12306.cn/*", "https://*.12306.cn/*", "http://*.fishlee.net/*", "http://*.liebao.cn/*", "notifications", "webRequest", "webRequestBlocking", "http://*.fishlee.net/*", "http://*.ijinshan.com/*", "*://*/*"/*, "experimental" */],
+	"permissions": [ "management", "tabs", "http://*.12306.cn/*", "https://*.12306.cn/*", "http://*.fishlee.net/*", "http://*.liebao.cn/*", "notifications", "webRequest", "webRequestBlocking", "http://*.fishlee.net/*", "http://*.ijinshan.com/*", "*://*/*", "experimental" ],
 	"update_url": "http://www.fishlee.net/service/update2/44/44/update_lb.xml",
 	"background": {
 		"page": "background.html"
